<resources>
    <string name="app_name">My Words</string>
    <string name="create_new_dictionary">Создать новый словарь</string>
    <string name="dictionaries">Словари</string>
    <string name="name_dictionary">Имя словоря</string>
    <string name="input_name_dictionary">Введите имя словоря</string>
    <string name="teach">Учить</string>
    <string name="recalling_the_words">Вспоминаем слова...</string>
    <string name="word_in_native">Слово на родном языке</string>
    <string name="word_in_foreign">Слово на иностранном языке</string>
    <string name="transcription">Транскрипция</string>
    <string name="input_word_in_foreign">Введите слово на иностранном языке</string>
    <string name="input_word_in_native">Введите слово на родном языке</string>
    <string name="input_transcription">Введите транскрипцию</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="text_cannot_be_empty">Текст не может быть пустым</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="delete_dictionary">Удалить словарь?</string>
    <string name="explanation_of_delete">Если вы удалите словарь, то слова тоже удаляться</string>
    <string name="settings">Настройки</string>
    <string name="settings_for_learning_words">Настройки для изучения слов</string>
    <string name="count_words_for_learning">Количество слов для изучения</string>
    <string name="number_of_repetitions_of_word">Количество повторений слова</string>
    <string name="few_words">Мало слов для изучения</string>
    <string name="you_want_exit">Вы хотите выйти?</string>
    <string name="explanation_of_exit">Если вы выйдите, то результат не будет сохранён</string>
    <string name="go_out">Выйти</string>
    <string name="word">Слово</string>
    <string name="reply">Ответить</string>
    <string name="select_answer_option">Выберите вариант ответа</string>
    <string name="right">Верно</string>
    <string name="wrong">Неверно</string>
    <string name="no_picture">Нет картинки</string>
    <string name="your_result">Ваш результат</string>
    <string name="scores">Баллы</string>
    <string name="badly">Плохо</string>
    <string name="fine">Нормально</string>
    <string name="excellent">Отлично</string>
    <string name="knowledge_level_word">Уровень знания</string>
    <string name="play_background_music">Проигрывать музыку во время изучения</string>
</resources>